# rust-svelte-dashboard

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml  Readme.md
api/src/: main.rs
api/src/models/: metrica.rs  mod.rs  user.rs
api/src/routes/: metrica.rs  mod.rs  sample.rs  user.rs
dash/: Readme.md  index.html  package-lock.json  package.json
dash/src/: App copy.svelte  App.svelte
