[package]
name = "api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "^1", features = ["derive"]    }
chrono = { version = "0.4.11", features = ["serde"] }
sqlx = { version ="0.6", features = ["runtime-async-std-native-tls", "postgres"] }
uuid = { version = "1.1.2", features = ["v4"]}
actix-web = "^4"
actix-rt = "2.7.0"
tokio = "1.19.2"
env_logger = "0.9"
log = "^0.4"
actix-cors = "0.6.1"